Remove TpchQueryRunnerBuilder.buildWithoutCatalogs()
The method was skipping all the state configured in the builder, so it
was just a hack. Replace with proper setup for custom connector
properties.